--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,102 +16,106 @@
   <body>
     <!--HEADER-->
     <header class="header-page">
-      <a class="logo" href="./index.html">WebStudio</a>
-      <nav>
-        <ul class="list">
-          <li><a class="link" href="./index.html">Студія</a></li>
-          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-          <li><a class="link" href="#contacts">Контакти</a></li>
+      <a class="logo link" href="./index.html"><span class="part-logo">Web</span>Studio</a>
+      <nav class="page-nav">
+        <ul class="menu list">
+          <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
+          <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item"><a class="menu-link link" href="#contacts">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="list">
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts list">
+        <li class="mail-contact">
+          <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="phone-contact">
+          <a class="phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <!--MAIN-->
     <main>
-      <section>
+      <section class="portfolio">
         <h1>Портфоліо</h1>
         <ul class="list">
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button class="btn-filter" type="button">Усі</button></li>
+          <li><button class="btn-filter" type="button">Веб-сайти</button></li>
+          <li><button class="btn-filter" type="button">Додатки</button></li>
+          <li><button class="btn-filter" type="button">Дизайн</button></li>
+          <li><button class="btn-filter" type="button">Маркетинг</button></li>
         </ul>
         <ul class="list">
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/1.jpg" alt="Відкритий веб сайт на пк" width="370" height="294" />
-              <h3>Технокряк</h3>
-              <p>Веб-сайт</p>
+              <h3 class="picture-captions">Технокряк</h3>
+              <p class="kind-pic">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="./images/2.jpg"
                 alt="Постер баскетбольної команди"
                 width="370"
                 height="294"
               />
-              <h3>Постер New Orlean vs Golden Star</h3>
-              <p>Дизайн</p>
+              <h3 class="picture-captions">Постер New Orlean vs Golden Star</h3>
+              <p class="kind-pic">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/3.jpg" alt="Постер ресторану" width="370" height="294" />
-              <h3>Ресторан Seafood</h3>
-              <p>Додаток</p>
+              <h3 class="picture-captions">Ресторан Seafood</h3>
+              <p class="kind-pic">Додаток</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/4.jpg" alt="Наушники" width="370" height="294" />
-              <h3>Проєкт Prime</h3>
-              <p>Маркетинг</p>
+              <h3 class="picture-captions">Проєкт Prime</h3>
+              <p class="kind-pic">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/5.jpg" alt="Дві коробки" width="370" height="294" />
-              <h3>Проєкт Boxes</h3>
-              <p>Додаток</p>
+              <h3 class="picture-captions">Проєкт Boxes</h3>
+              <p class="kind-pic">Додаток</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="./images/6.jpg"
                 alt="Монітор з відкритим веб сайтом"
                 width="370"
                 height="294"
               />
-              <h3>Inspiration has no Borders</h3>
-              <p>Веб-сайт</p>
+              <h3 class="picture-captions">Inspiration has no Borders</h3>
+              <p class="kind-pic">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/7.jpg" alt="Відкрита книга" width="370" height="294" />
-              <h3>Видання Limited Edition</h3>
-              <p>Дизайн</p>
+              <h3 class="picture-captions">Видання Limited Edition</h3>
+              <p class="kind-pic">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/8.jpg" alt="Лейба на нитці" width="370" height="294" />
-              <h3>Проєкт LAB</h3>
-              <p>Маркетинг</p>
+              <h3 class="picture-captions">Проєкт LAB</h3>
+              <p class="kind-pic">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/9.jpg" alt="Людина працює за ноутбуком" width="370" height="294" />
-              <h3>Growing Business</h3>
-              <p>Додаток</p>
+              <h3 class="picture-captions">Growing Business</h3>
+              <p class="kind-pic">Додаток</p>
             </a>
           </li>
         </ul>
@@ -119,13 +123,15 @@
     </main>
     <!--FOOTER-->
 
-    <footer id="contacts">
-      <a class="logo" href="./index.html">WebStudio</a>
-      <address>
+    <footer class="page-bottom" id="contacts">
+      <a class="logo link" href="./index.html"
+        ><span class="part-logo">Web</span><span class="part-logo-w">Studio</span></a
+      >
+      <address class="our-adress">
         <ul class="list">
           <li>
             <a
-              class="link"
+              class="link our-location"
               href="https://goo.gl/maps/ukndWsPq22E3wPCn8"
               target="_blank"
               rel="noopener nofolow"
@@ -133,10 +139,10 @@
             >
           </li>
           <li>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link our-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link our-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
