made comments of the mentor

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,9 @@
       <nav class="page-nav">
         <ul class="menu list">
           <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
-          <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="menu-item">
+            <a class="menu-link link current" href="./portfolio.html">Портфоліо</a>
+          </li>
           <li class="menu-item"><a class="menu-link link" href="#contacts">Контакти</a></li>
         </ul>
       </nav>
@@ -36,7 +38,7 @@
     <!--MAIN-->
     <main>
       <section class="portfolio">
-        <h1>Портфоліо</h1>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="list">
           <li><button class="btn-filter" type="button">Усі</button></li>
           <li><button class="btn-filter" type="button">Веб-сайти</button></li>
@@ -48,7 +50,7 @@
           <li>
             <a class="link" href="">
               <img src="./images/1.jpg" alt="Відкритий веб сайт на пк" width="370" height="294" />
-              <h3 class="picture-captions">Технокряк</h3>
+              <h2 class="picture-captions">Технокряк</h3>
               <p class="kind-pic">Веб-сайт</p>
             </a>
           </li>
@@ -60,28 +62,28 @@
                 width="370"
                 height="294"
               />
-              <h3 class="picture-captions">Постер New Orlean vs Golden Star</h3>
+              <h2 class="picture-captions">Постер New Orlean vs Golden Star</h3>
               <p class="kind-pic">Дизайн</p>
             </a>
           </li>
           <li>
             <a class="link" href="">
               <img src="./images/3.jpg" alt="Постер ресторану" width="370" height="294" />
-              <h3 class="picture-captions">Ресторан Seafood</h3>
+              <h2 class="picture-captions">Ресторан Seafood</h3>
               <p class="kind-pic">Додаток</p>
             </a>
           </li>
           <li>
             <a class="link" href="">
               <img src="./images/4.jpg" alt="Наушники" width="370" height="294" />
-              <h3 class="picture-captions">Проєкт Prime</h3>
+              <h2 class="picture-captions">Проєкт Prime</h3>
               <p class="kind-pic">Маркетинг</p>
             </a>
           </li>
           <li>
             <a class="link" href="">
               <img src="./images/5.jpg" alt="Дві коробки" width="370" height="294" />
-              <h3 class="picture-captions">Проєкт Boxes</h3>
+              <h2 class="picture-captions">Проєкт Boxes</h3>
               <p class="kind-pic">Додаток</p>
             </a>
           </li>
@@ -93,28 +95,28 @@
                 width="370"
                 height="294"
               />
-              <h3 class="picture-captions">Inspiration has no Borders</h3>
+              <h2 class="picture-captions">Inspiration has no Borders</h3>
               <p class="kind-pic">Веб-сайт</p>
             </a>
           </li>
           <li>
             <a class="link" href="">
               <img src="./images/7.jpg" alt="Відкрита книга" width="370" height="294" />
-              <h3 class="picture-captions">Видання Limited Edition</h3>
+              <h2 class="picture-captions">Видання Limited Edition</h3>
               <p class="kind-pic">Дизайн</p>
             </a>
           </li>
           <li>
             <a class="link" href="">
               <img src="./images/8.jpg" alt="Лейба на нитці" width="370" height="294" />
-              <h3 class="picture-captions">Проєкт LAB</h3>
+              <h2 class="picture-captions">Проєкт LAB</h3>
               <p class="kind-pic">Маркетинг</p>
             </a>
           </li>
           <li>
             <a class="link" href="">
               <img src="./images/9.jpg" alt="Людина працює за ноутбуком" width="370" height="294" />
-              <h3 class="picture-captions">Growing Business</h3>
+              <h2 class="picture-captions">Growing Business</h3>
               <p class="kind-pic">Додаток</p>
             </a>
           </li>
