--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <a class="logo link" href="./index.html"><span class="part-logo">Web</span>Studio</a>
       <nav class="page-nav">
         <ul class="menu list">
-          <li class="menu-item"><a class="menu-link link" href="./index.html">Студія</a></li>
+          <li class="menu-item">
+            <a class="menu-link link current" href="./index.html">Студія</a>
+          </li>
           <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфоліо</a></li>
           <li class="menu-item"><a class="menu-link link" href="#contacts">Контакти</a></li>
         </ul>
@@ -41,7 +43,7 @@
       </section>
 
       <section class="advantages">
-        <h2>Наші переваги</h2>
+        <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="list">
           <li>
             <h3 class="advantage">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -83,7 +85,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2 class="our-team">Наша команда</h2>
         <ul class="list">
           <li>
